<resources>
    <string name="app_name">PBL6</string>
    <string name="full_name">Full name</string>
    <string name="sign_up_for_an_account">Sign Up for an Account</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="or">or</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="example_email">example@gmail.com</string>
    <string name="password_placeholder">6+ strong character</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="error_invalid_email">Invalid email, please type a valid email address.</string>
    <string name="error_invalid_password">Password must meets required constrains.</string>
    <string name="sign_up">Sign up</string>
    <string name="have_not_had_any_account">Haven\'t had any account?</string>
    <string name="email_or_password_incorrect">Email and/or password was incorrect.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_registered_email_request">Enter your registered email below to receive password reset instruction</string>
    <string name="send">Send</string>
    <string name="remember_password">Remember password?</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="enter_otp_request">Please enter the 4 digits code sent to</string>
    <string name="retype_password">Re-type password</string>
    <string name="submit">Submit</string>
    <string name="publish_course">Publish Course</string>
    <string name="did_not_receive_the_code">Didn\'t receive the code?</string>
    <string name="resend">Resend</string>
    <string name="set_new_password">Set new password</string>
    <string name="strong_password_recommendation">A strong password hepls prevent unauthorized access to your new account.</string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New Password</string>
    <string name="search">Search</string>
    <string name="notification">Notifications</string>
    <string name="upload">Upload</string>
    <string name="recent_videos">Recent Videos</string>
    <string name="popular_videos">Popular Videos</string>
    <string name="views">Views</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="watch_now">Watch now</string>
    <string name="menu">Menu</string>
    <string name="home_page">Home Page</string>
    <string name="trendy">Trendy</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sign_in_success">Sign in Success!</string>
    <string name="sign_up_success">Sign up successful</string>
    <string name="field_cant_not_be_empty">Field can not be empty</string>
    <string name="confirm_password_error">Password and confirm password must be matched</string>
    <string name="upload_information">Upload Information</string>
    <string name="upload_sections">Upload Sections</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="title">Title</string>
    <string name="upload_your">Upload Your</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="support_format">Support: MP4, MOV, WMV</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="enter_price_here">Enter price here</string>
    <string name="select_category">Select category</string>
    <string name="hashtag">Hashtag</string>
    <string name="select_hashtag">Select hashtag</string>
    <string name="new_lecture">New Lecture:</string>
    <string name="lecture_title">Lecture Title</string>
    <string name="enter_lecture_title">Enter lecture title here</string>
    <string name="video">Video</string>
    <string name="my_courses">My Courses</string>
    <string name="language">Language</string>
    <string name="logo_description">Storytelling</string>
    <string name="course">Course</string>
    <string name="upload_course">Upload Course</string>
    <string name="description">Description</string>
    <string name="enter_description_here">Enter description here</string>
    <string name="information">Information</string>
    <string name="create_sections">Create Sections</string>
    <string name="profile">Profile</string>
    <string name="holder">Holder</string>
    <string name="select">Select</string>
    <string name="required_title">Title is required</string>
    <string name="require_description">Description is required</string>
    <string name="require_price">Price must be a number</string>
    <string name="require_category">Category is required</string>
    <string name="add">Add</string>
    <string name="add_section">Add Section</string>
    <string name="new_section">New Section:</string>
    <string name="section_title">Section title</string>
    <string name="enter_section_title">Enter section title here</string>
    <string name="lecture_description">Lecture Description</string>
    <string name="add_lecture">Add Lecture</string>
    <string name="is_private">Private</string>
    <string name="section">Section</string>
    <string name="lecture">Lecture</string>
    <string name="lecture_video">Lecture Video</string>
    <string name="enroll">Enroll Now</string>
    <string name="show_more">Show more</string>
    <string name="created_by">Created By</string>
    <string name="course_content">Course content</string>
    <string name="on_demand_video">hours on-demand video</string>
    <string name="sections">sections</string>
    <string name="more">…more</string>
    <string name="share">Share</string>
    <string name="slash">/</string>
    <string name="unknown">Unknown</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="read_more">Read more</string>
    <string name="holder_avatar">https://aui.atlassian.com/aui/latest/docs/images/avatar-person.svg</string>
    <string name="my_purchased_courses">My Purchased Courses</string>
    <string name="purchased">Purchased</string>
    <string name="cancel">Cancel</string>
    <string name="purchase">Purchase</string>
    <string name="course_purchase">Course Purchase</string>
    <string name="do_you_want_to_purchase_this_course">Do you want to purchase this course?</string>
    <string name="error_purchasing_course">Error purchasing course</string>
    <string name="purchase_success">Purchase Success</string>
    <string name="fail_to_purchase">Fail To Purchase</string>
    <string name="join_at">Join</string>
    <string name="followers">Followers</string>
    <string name="students">Students</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="follow">Follow</string>
    <string name="statistic">Statistic</string>
    <string name="my_publish_courses">My Publish Courses</string>
    <string name="request_to_become_an_instructor">Request To Become An Instructor</string>
    <string name="courses">Courses</string>
    <string name="manage_your_information">Manage your personal information, passwords and more</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="occupation">Occupation</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="front_side_of_identity_card">Front side of identity card</string>
    <string name="front_identity_card">Front Identity Card</string>
    <string name="back_side_of_identity_card">Back side of identity card</string>
    <string name="back_identity_card">Back Identity Card</string>
    <string name="edit">Edit</string>
    <string name="old_password">Old Password</string>
    <string name="enter_your_old_password_here">Enter your old password here</string>
    <string name="enter_your_new_password_here">Enter your new password here</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="enter_your_new_password_again">Enter your new password again</string>
    <string name="change">Change</string>
    <string name="update_information">Update Information</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="instructor_request">Become an Instructor?</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="do_you_want_to_become_an_instructor">Do you want to become an Instructor?</string>
    <string name="must_fulfill_info_to_become_instructor">You must be fulfill all your information before request to become an instructor</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="your_request_is_sent">Your request is sent</string>
    <string name="already_request_to_become_instructor">You have already requested. Please wait while your request is being verified by our admin</string>
    <string name="example_birthday">2001–01–01</string>
    <string name="take_picture">Take picture</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="permis_denied">Permission Denied</string>
    <string name="permis_unable_message">Our app is unable to request your device camera permission. You need to go to your app setting and set camera permission as allow so that you can begin to use this feature.</string>
    <string name="go_to_setting">GO TO APP SETTING</string>
    <string name="permis_denied_message">Our app requires this permission to access your device\'s camera functionality so that you can take your picture and set it as your avatar in the app. Are you sure you want to deny this permission?</string>
    <string name="sure">SURE</string>
    <string name="logout_confirm">You sure want to log out?</string>
    <string name="let_allow">Let me allow it</string>
    <string name="identity_card_front_side_image_url">Identity Card Front Side Image Url</string>
    <string name="identity_card_back_side_image_url">Identity Card Back Side Image Url</string>
    <string name="invalid_phone">Invalid Phone Number</string>
    <string name="please_fulfill_all_info">Please fulfill all of the required information</string>
    <string name="password_must_be_matched">Password must be matched</string>
    <string name="change_password_success">Change password successfully</string>
    <string name="search_something">Search something…</string>
    <string name="search_courses">Search Courses</string>
    <string name="filter_your_search">Filter your search</string>
    <string name="price_slider">Price Slider</string>
    <string name="vnd">Vnd</string>
    <string name="dash">-</string>
    <string name="tag">Tag</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="zero_star">0.0</string>
</resources>