<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/menu">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/home_page"
                    android:checked="true"
                    />
                <item
                    android:id="@+id/nav_popular_course"
                    android:icon="@drawable/ic_play_video"
                    android:title="@string/popular_videos"/>
                <item
                    android:id="@+id/nav_trendy"
                    android:icon="@drawable/ic_trendy"
                    android:title="@string/trendy"/>
            </group>
        </menu>
    </item>
</menu>