<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_dialog">

        <TextView
            android:id="@+id/tv_new_lecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/new_lecture"
            android:textColor="@color/black_100"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/txt_lecture_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_lecture_title"
            style="@style/CommonEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/lecture_title"
            app:layout_constraintBottom_toTopOf="@id/txt_lecture_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_new_lecture"
            app:layout_constraintTop_toBottomOf="@id/tv_new_lecture"
            app:layout_constraintVertical_chainStyle="packed"
            app:placeholderText="@string/enter_lecture_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:inputType="textEmailAddress"
                android:textColor="@color/black_100"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_lecture_description"
            style="@style/CommonEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/lecture_description"
            app:layout_constraintBottom_toTopOf="@id/ll_upload_thumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_new_lecture"
            app:layout_constraintTop_toBottomOf="@id/txt_lecture_title"
            app:layout_constraintVertical_chainStyle="packed"
            app:placeholderText="@string/enter_description_here">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:inputType="textEmailAddress"
                android:textColor="@color/black_100"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_upload_thumbnail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_upload_thumbnail"
            android:orientation="vertical"
            android:paddingVertical="26sp"
            app:layout_constraintBottom_toTopOf="@id/ll_upload_video"
            app:layout_constraintEnd_toEndOf="@id/txt_lecture_description"
            app:layout_constraintStart_toStartOf="@id/txt_lecture_description"
            app:layout_constraintTop_toBottomOf="@id/txt_lecture_description">

            <ImageView
                android:id="@+id/iv_upload_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:src="@drawable/ic_upload_thumbnail" />

            <LinearLayout
                android:id="@+id/ll_upload_your_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_upload_your"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_your"
                    android:textColor="@color/black_100"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_upload_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/thumbnail"
                    android:textColor="@color/red_100"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_support_image_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="@string/support_format"
                android:textColor="@color/black_100"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_upload_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_upload_thumbnail"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            android:paddingVertical="26sp"
            app:layout_constraintBottom_toTopOf="@id/cb_is_private"
            app:layout_constraintEnd_toEndOf="@id/ll_upload_thumbnail"
            app:layout_constraintStart_toStartOf="@id/ll_upload_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/ll_upload_thumbnail">

            <ImageView
                android:id="@+id/iv_upload_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:src="@drawable/ic_upload_thumbnail" />

            <LinearLayout
                android:id="@+id/ll_upload_your_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_upload_your_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_your"
                    android:textColor="@color/black_100"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_upload_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/video"
                    android:textColor="@color/red_100"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_support_video_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="@string/support_format"
                android:textColor="@color/black_100"
                android:textSize="12sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_is_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_upload_video"
            app:layout_constraintStart_toStartOf="@id/ll_upload_video"
            app:layout_constraintBottom_toTopOf="@id/btn_add_lecture"
            android:text="@string/is_private"
            android:textColor="@color/black_100"
            android:paddingHorizontal="0dp"
            android:buttonTint="@color/checkbox_button_tint_color"
            />

        <Button
            android:id="@+id/btn_add_lecture"
            style="@style/AppYellowButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/add_lecture"
            android:textColor="@color/black_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_is_private" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>