<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_dialog">

        <TextView
            android:id="@+id/tv_new_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/new_section"
            android:textColor="@color/black_100"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/txt_section_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_section_title"
            style="@style/CommonEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/section_title"
            app:layout_constraintBottom_toTopOf="@id/btn_add_section"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_new_section"
            app:layout_constraintTop_toBottomOf="@id/tv_new_section"
            app:layout_constraintVertical_chainStyle="packed"
            app:placeholderText="@string/enter_section_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:inputType="textEmailAddress"
                android:textColor="@color/black_100"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add_section"
            style="@style/AppYellowButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_section"
            android:layout_marginVertical="16dp"
            android:textColor="@color/black_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_section_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>