<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimen_16dp"
    android:background="@drawable/bg_dialog">

    <ImageView
        android:id="@+id/iv_instructor_request"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:contentDescription="@null"
        android:src="@drawable/image_instructor_request"
        app:layout_constraintBottom_toTopOf="@id/tv_instructor_request_title"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/tv_instructor_request_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:ellipsize="marquee"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="2"
        android:text="@string/do_you_want_to_become_an_instructor"
        android:textColor="@color/black_100"
        android:textSize="@dimen/dimen_18sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/tv_instructor_request_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_instructor_request" />

    <TextView
        android:id="@+id/tv_instructor_request_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/must_fulfill_info_to_become_instructor"
        android:textAlignment="center"
        android:textColor="@color/gray_700"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_instructor_request_title" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:padding="@dimen/dimen_0dp"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textColor="@color/black_100"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_ok"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_instructor_request_message"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/btn_ok"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:padding="@dimen/dimen_0dp"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="@color/yellow_100"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_cancel"
        app:layout_constraintWidth_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>
